# style_flow

./: .gitattributes  README.md  Requirements.txt
face/: README.md  common.py  infer.py  requirements.txt  version.md
face/female/: best_model.pth  class_geo_medians.pkl  geo_scaler.pkl  infer.py  swa_model.pth  train.py
face/male/: best_model.pth  class_geo_medians.pkl  exclude_list.txt  geo_scaler.pkl  infer.py  train.py  train_summary.json
face/model/: train_v19.py
personal/: README.md  version.md
personal/model/: infer.py  pyproject.toml  train.py
personal/model/outputs/: season_spring_autumn.pt  season_spring_autumn_scaler.joblib  season_summer_winter.pt  season_summer_winter_scaler.joblib  temperature_spring_summer_autumn_winter.pt  temperature_spring_summer_autumn_winter_scaler.joblib
