[project]
name = "personal-color-v09"
version = "0.9.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "torch>=2.1.0",
    "Pillow>=10.0.0",
]

# PyTorch index (CUDA 13 / cu130)
[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
